# rust-starcode

./: Cargo.toml  Makefile  README.md  Untitled.ipynb  all_errors.txt  bindings.rs  build.rs  errors.txt  leaked_memory.txt  lib.rs  output.rs  randos.txt  starcode.c  wrapper.h
Untitled.xcworkspace/: contents.xcworkspacedata
Untitled.xcworkspace/xcuserdata/aaronmck.xcuserdatad/: UserInterfaceState.xcuserstate
src/: main-starcode.c  starcode.c  starcode.h  trie.c  trie.h
