[package]
name = "rust_starcode"
version = "0.0.1"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["starcode"]
build = "build.rs"

description = """
Binding for starcode in rust
"""
[workspace]

[lib]
name = "rust_starcode"
path = "lib.rs"

[dependencies]
libc = "0.2"
tempfile = "3.3"
bindgen = "0.69.4"
rand = "0.9.0-alpha.1"

[build-dependencies]
bindgen = "*"